<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.codelibs</groupId>
	<artifactId>jcifs</artifactId>
	<version>2.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>jCIFS</name>
	<url>https://github.com/codelibs/jcifs</url>
	<description>JCIFS is an Open Source client library that implements the CIFS/SMB networking protocol in 100% Java</description>
	<licenses>
		<license>
			<name>GNU Lesser General Public License, version 2.1</name>
			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>CodeLibs Project</name>
		<url>https://www.codelibs.org/</url>
	</organization>
	<developers>
		<developer>
			<id>shinsuke</id>
			<name>Shinsuke Sugaya</name>
			<email>shinsuke.sugaya@codelibs.co</email>
			<organization>CodeLibs Inc.</organization>
			<organizationUrl>https://codelibs.co</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:codelibs/jcifs.git</connection>
		<developerConnection>scm:git:git@github.com:codelibs/jcifs.git</developerConnection>
		<url>https://github.com/codelibs/jcifs</url>
	  <tag>HEAD</tag>
  </scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<osgi-version-qualifier>${maven.build.timestamp}</osgi-version-qualifier>
		<osgi.version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${osgi-version-qualifier}</osgi.version>
		<osgi.pkg.version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</osgi.pkg.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
					<source>17</source>
					<doclint>none</doclint>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>jcifs</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>6.0.0</version>
				<extensions>true</extensions>

				<configuration>
					<instructions>
						<Bundle-Version>${osgi.version}</Bundle-Version>
						<Bundle-License>LGPL</Bundle-License>
						<Bundle-Vendor>CodeLibs</Bundle-Vendor>
						<Bundle-SymbolicName>org.codelibs.jcifs</Bundle-SymbolicName>
						<Export-Package>
							jcifs.internal*;version="${osgi.pkg.version}";x-internal:=true,
							jcifs*;version="${osgi.pkg.version}",
						</Export-Package>
						<Private-Package />
						<Import-Package>
							javax.servlet*;resolution:=optional,
							com.sun.security.jgss;resolution:=optional,
							org.bouncycastle*;version="1.63",
							!jcifs.internal*,
							*
						</Import-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>clirr-maven-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<id>check-compatibility</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>false</failOnError>
					<ignored>
						<difference>
							<!-- seems to be a clirr bug that it cannot handle the different inherited 
								return types -->
							<className>**</className>
							<differenceType>7006</differenceType>
							<method>*</method>
							<from>*</from>
							<to>*</to>
						</difference>
						<difference>
							<className>jcifs/Configuration</className>
							<differenceType>7012</differenceType>
							<method>boolean isSendNTLMTargetName()</method>
						</difference>

						<difference>
							<className>jcifs/Configuration</className>
							<differenceType>7012</differenceType>
							<method>boolean isAllowGuestFallback()</method>
						</difference>
						<difference>
							<className>jcifs/Configuration</className>
							<differenceType>7012</differenceType>
							<method>java.lang.String getGuestUsername()</method>
						</difference>
						<difference>
							<className>jcifs/Configuration</className>
							<differenceType>7012</differenceType>
							<method>java.lang.String getGuestPassword()</method>
						</difference>
						<difference>
							<className>jcifs/SmbResource</className>
							<differenceType>7012</differenceType>
							<method>void setFileTimes(long, long, long)</method>
						</difference>
					</ignored>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<includes>
						<include>**/**Test.java</include>
					</includes>
					<systemPropertyVariables>
						<networkaddress.cache.ttl>-1</networkaddress.cache.ttl>
						<networkaddress.cache.negative.ttl>-1</networkaddress.cache.negative.ttl>
					</systemPropertyVariables>
					<properties>
						<property>
							<name>listener</name>
							<value>jcifs.tests.PrintingRunListener</value>
						</property>
					</properties>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.rat</groupId>
				<artifactId>apache-rat-plugin</artifactId>
				<version>0.16.1</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<addDefaultLicenseMatchers>true</addDefaultLicenseMatchers>
					<excludes>
						<exclude>pom.xml</exclude>
						<exclude>breaking-changes.xml</exclude>
						<exclude>README.md</exclude>
						<exclude>build.properties</exclude>
						<exclude>src/test/resources/**</exclude>
						<exclude>**/*.idl</exclude>
						<exclude>**/*.css</exclude>
						<exclude>.*</exclude>
						<exclude>.*/**</exclude>
						<exclude>META-INF/**</exclude>
						<exclude>src/main/java/jcifs/dcerpc/msrpc/netdfs.java</exclude>
						<exclude>src/main/java/jcifs/dcerpc/msrpc/srvsvc.java</exclude>
						<exclude>src/main/java/jcifs/dcerpc/msrpc/samr.java</exclude>
						<exclude>src/main/java/jcifs/dcerpc/msrpc/lsarpc.java</exclude>
						<exclude>src/main/java/jcifs/dcerpc/rpc.java</exclude>
						<exclude>src/main/java/jcifs/smb1/**</exclude>
					</excludes>
					<licenses>
						<license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
							<licenseFamilyCategory>LGPL</licenseFamilyCategory>
							<licenseFamilyName>GNU Lesser General Public License</licenseFamilyName>
							<notes />
							<patterns>
								<pattern>This library is free software; you can redistribute it</pattern>
								<pattern>GNU Lesser General Public License</pattern>
							</patterns>
						</license>
					</licenses>
					<licenseFamilies>
						<licenseFamily implementation="org.apache.rat.license.SimpleLicenseFamily">
							<familyName>GNU Lesser General Public License</familyName>
						</licenseFamily>
					</licenseFamilies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.36</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>1.7.36</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.80</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
